--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.3",
+    "express-handlebars": "^6.0.6",
     "socket.io": "^4.7.5"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
